--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,5 @@ jobs:
             cd /srv/mdudebot-v2/
             git pull
             npm install
+            npm run build
             pm2 restart mdudebot
