--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.1.0",
-    "@discordjs/voice": "^0.11.0",
+    "@discordjs/voice": "^0.16.0",
     "axios": "^0.27.2",
-    "discord.js": "^14.3.0",
+    "discord.js": "^14.9.0",
     "dotenv": "^16.0.2",
     "ffmpeg-static": "^5.1.0",
-    "libsodium-wrappers": "^0.7.10",
+    "libsodium-wrappers": "^0.7.11",
+    "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
